--- a/src/app/menu/header/header.component.html
+++ b/src/app/menu/header/header.component.html
@@ -6,17 +6,24 @@
   <span class="spacer"></span>
   <ul>
 	<span *ngIf='userIsAuthenticated'><img [src] = "user.imageAvt || ''" width="35px" height="35px" style="border-radius: 50%;"></span>
-	<li *ngIf='userIsAuthenticated'>
-		<button
-		mat-button
-		[matMenuTriggerFor]="menu"
-		routerLinkActive="mat-accent">
-		<span>{{username}}</span>
-		</button>
-		<mat-menu #menu = "matMenu">
-			<button mat-menu-item (click) = "showChild('setting')" > Hồ sơ shop </button>
-			<button mat-menu-item routerLinkActive="mat-accent" (click) = 'onLogout()'>Đăng xuất</button>
-		</mat-menu>
+	  <li *ngIf='userIsAuthenticated'>
+      <button
+      mat-button
+      [matMenuTriggerFor]="menu"
+      routerLinkActive="mat-accent">
+      <span>{{username}}</span>
+      </button>
+      <mat-menu #menu = "matMenu">
+        <button mat-menu-item (click) = "showChild('setting')" > Hồ sơ shop </button>
+        <button mat-menu-item routerLinkActive="mat-accent" (click) = 'onLogout()'>Đăng xuất</button>
+      </mat-menu>
+	  </li>
+    <li *ngIf='!userIsAuthenticated'>
+      <button
+      mat-button
+      routerLinkActive="mat-accent">
+      <span>Login</span>
+      </button>
 	  </li>
     <li>
       <button
