--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,7 @@
 
 body { margin: 0; }
 .material-icons.orange600 { color: #FB8C00; }
+
+* {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
