--- a/src/app/menu/header/header.component.html
+++ b/src/app/menu/header/header.component.html
@@ -5,7 +5,7 @@
   </span>
   <span class="spacer"></span>
   <ul>
-	<span *ngIf='userIsAuthenticated'><img [src] = "user.imageAvt || ''" width="35px" height="35px" style="border-radius: 50%;"></span>
+	<!-- <span *ngIf='userIsAuthenticated'><img [src] = "user.imageAvt || ''" width="35px" height="35px" style="border-radius: 50%;"></span> -->
 	  <li *ngIf='userIsAuthenticated'>
       <button
       mat-button
