--- a/src/app/menu/header/header.component.html
+++ b/src/app/menu/header/header.component.html
@@ -28,7 +28,7 @@
     <li>
       <button
         mat-button
-        matBadge="8"
+        matBadge="{{countCart}}"
         matBadgePosition="before"
         matBadgeColor="accent"
         [matMenuTriggerFor] = 'menu'
