--- a/src/app/tickets/ticket-detail/ticket-detail.component.html
+++ b/src/app/tickets/ticket-detail/ticket-detail.component.html
@@ -54,12 +54,12 @@
           (click) = "showInfoService(i)">
            {{item.name}} </button>
       </div>
-      
+
       <div>
         <form [formGroup]="form">
           <p>Số lượng</p>
-          <div 
-            *ngFor="let item of listItemService; index as i" 
+          <div
+            *ngFor="let item of listItemService; index as i"
             class="service_price" >
             <div>
               <p>{{item.itemServiceName}}</p>
@@ -68,24 +68,23 @@
               <p>{{item.itemServicePrice}}</p>
             </div>
             <div>
-              <button 
-                mat-stroked-button 
+              <button
+                mat-stroked-button
                 (click)="item.quantity=item.quantity+1">+</button>
-                <!-- <button 
-                mat-stroked-button 
-                (click)="incrementInput.value=+incrementInput.value + 1">+</button> -->
               <mat-form-field appearance="outline">
-                <input 
+                <input
                   style="width: 30px;"
                   formControlName = "quantity"
-                  matInput 
-                  #incrementInput 
-                  type="number" 
+                  matInput
+                  #incrementInput
+                  type="number"
                   min="0"
                   [value]="item.quantity"
                   placeholder="0">
               </mat-form-field>
-              <button mat-stroked-button (click)="item.quantity=item.quantity-1">-</button>
+              <button
+                mat-stroked-button
+                (click)="item.quantity=item.quantity-1">-</button>
             </div>
           </div>
 
@@ -93,8 +92,8 @@
             <mat-form-field appearance="fill">
               <mat-label>Nhập ngày</mat-label>
               <mat-date-range-input [rangePicker]="picker">
-                <input matStartDate placeholder="Start date">
-                <input matEndDate placeholder="End date">
+                <input matStartDate placeholder="Start date" formControlName = "dateStart">
+                <input matEndDate placeholder="End date" formControlName = "dateEnd" (dateChange) = "getDate()">
               </mat-date-range-input>
               <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
               <mat-date-range-picker #picker></mat-date-range-picker>
@@ -106,7 +105,7 @@
             <button mat-raised-button color="warn">Đặt ngay</button>
           </div>
         </form>
-        
+
       </div>
     </mat-card>
     <mat-card class="description">
