cart update add

--- a/src/app/pages/cart/cart.component.css
+++ b/src/app/pages/cart/cart.component.css
@@ -2,3 +2,12 @@
   margin: 1rem;
   padding: 1rem;
 }
+
+.nameService {
+  max-width: 300px;
+  word-wrap: break-word;
+}
+
+.cart {
+  display: flex;
+}
