--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -7,27 +7,117 @@
   </mat-card-title>
 </mat-card>
 
-<div class="cart_operator_bar">
-  <div>
-      <span class="u_checkbox_square with_desc">
-        <input type="checkbox" id="j_all" name="j_all" class="j_all" checked="">
-        <label for="j_all">
-            <span></span>
-        </label>
-      </span>
-      <span class="all text">Tất cả </span>
-      <span class="delete_all text">
-        <a id="del_chk" class="f_h_main" data-gatag="Shopping Cart|Delete Selected Activity" data-role="delall">Xoá dịch vụ đã chọn </a>
-      </span>
-  </div>
-</div>
 
-<mat-card *ngFor="let item of cart">
-  <mat-card-header>
-    <div mat-card-avatar class="example-header-image">
-      <img [src] = "item.imageTicket" style="max-width: 200px;">
-    </div>
-    <mat-card-title>{{item.nameTicket}}</mat-card-title>
-    <mat-card-subtitle>Loại gói dịch vụ: {{item.itemService[0].name}}</mat-card-subtitle>
-  </mat-card-header>
-</mat-card>
+<section class="cart">
+  <table>
+    <thead>
+      <mat-card>
+        <tr>
+          <td>
+            <mat-checkbox
+              (change)="setAll($event.checked)">Tất cả
+            </mat-checkbox>
+          </td>
+          <td><button (click) = "deleteServiceExpired()">Xóa các dịch vụ hết hạn</button></td>
+          <td><button (click) = "deleteServiceIsSelected()">Xóa các dịch vụ đã chọn</button></td>
+        </tr>
+      </mat-card>
+      
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of itemStill; index as i">
+        <mat-card>
+          <td>
+            <mat-checkbox 
+              (change)="setSome($event.checked, i)"
+              [checked] = 'allComplete[i]'></mat-checkbox>
+          </td>
+          <td><img [src] = "item.imageTicket" width="100px" height="50px"></td>
+          <td class="infoName">
+            <a class="nameTicket" [routerLink]="['/detail/', item.idTicket]">{{item.nameTicket}}</a>
+            <p class="nameService">Loại dịch vụ: {{item.itemService[0].name}}</p>
+          </td>
+          <td class="date">
+            <p>{{item.dateStart + ' - ' + item.dateEnd}}</p>
+            <p>(Giờ địa phương)</p>
+          </td>
+          <td class="uni">
+            <section class="uniNumPrice" *ngFor="let itemNum of item.itemService; index as iNum">
+              <div>{{itemNum.itemServiceName}}</div>
+              <div>
+                <button 
+                  mat-button
+                  (click)="addQuantity(i, iNum)" 
+                  style="border: 1px solid #f1f1f1; border-radius: 10px; height: 40px; width: 40px;">
+                  <mat-icon>add</mat-icon>
+                </button>
+                  <input matInput [value]="itemNum.quantity" style="height: 40px; width: 40px;">
+                <button 
+                  mat-button 
+                  (click)="subtractQuantity(i, iNum)" 
+                  style="border: 1px solid #f1f1f1; border-radius: 10px; height: 40px; width: 40px;">
+                  <mat-icon>remove</mat-icon>
+                </button>
+              </div>
+            </section>
+          </td>
+          <td colspan="7">
+            <div>
+              <button mat-button [routerLink]="['/detail/update', item.id]">Sửa</button>
+              <button mat-button (click) = "deleteOne(item.id)">Xóa</button>
+              <span>{{priceItemStill[i]}}</span>
+            </div>
+          </td>
+        </mat-card>
+      </tr>
+
+      <tr *ngFor="let item of itemExpired; index as i">
+        <mat-card>
+          <td>
+            <mat-checkbox disabled = "true"></mat-checkbox>
+          </td>
+          <td><img [src] = "item.imageTicket" width="100px" height="50px"></td>
+          <td class="infoName">
+            <p class="nameTicket">{{item.nameTicket}}</p>
+            <p class="nameService">Loại dịch vụ: {{item.itemService[0].name}}</p>
+          </td>
+          <td class="date">
+            <p>{{item.dateStart + ' - ' + item.dateEnd}}</p>
+            <p>(Giờ địa phương)</p>
+          </td>
+          <td class="uni">
+            <section class="uniNumPrice" *ngFor="let itemNum of item.itemService">
+              <div>{{itemNum.itemServiceName}}</div>
+              <div>
+                <button 
+                  style="border: 1px solid #f1f1f1; border-radius: 10px; height: 40px; width: 40px;">
+                  <mat-icon>add</mat-icon>
+                </button>
+                  <input 
+                    [value]="itemNum.quantity" 
+                    style="height: 40px; width: 40px;">
+                <button
+                  style="border: 1px solid #f1f1f1; border-radius: 10px; height: 40px; width: 40px;">
+                  <mat-icon>remove</mat-icon>
+                </button>
+              </div>
+            </section>
+          </td>
+          <td colspan="7">
+            <div>
+              <button mat-button (click) = "deleteOne(item.id)">Xóa</button>
+              <span>{{priceItemExpired[i]}}</span>
+            </div>
+          </td>
+        </mat-card>
+      </tr>
+    </tbody>
+  </table>
+
+  <mat-card class="total">
+    <div>{{countServiceSelect}} x dịch vụ được chọn - Tổng cộng:</div>
+    <div>{{priceTotal}}đ</div>
+    <button mat-raised-button color="warn">Thanh toán ngay</button>
+  </mat-card>
+</section>
+
