--- a/src/app/pages/pay/pay.component.html
+++ b/src/app/pages/pay/pay.component.html
@@ -107,7 +107,7 @@
   <!-- step 3: Thông tin thanh toán -->
   <mat-step [stepControl]="formPay">
     <ng-template matStepLabel>Thông tin thanh toán</ng-template>
-    <button mat-stroked-button color="primary">Thay toán và đổi vé tại quầy</button>
+    <button mat-stroked-button color="primary">Thanh toán và đổi vé tại quầy</button>
     <button mat-stroked-button color="primary">Thanh toán qua thẻ</button>
   </mat-step>
 </mat-horizontal-stepper>
