--- a/src/app/pages/pay/pay.component.css
+++ b/src/app/pages/pay/pay.component.css
@@ -36,3 +36,20 @@ form {
   margin: 0 auto;
   text-align: center;
 }
+
+#recaptcha-container {
+  text-align: center;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+}
+
+.example-radio-group {
+  display: flex;
+  flex-direction: column;
+  margin: 15px 0;
+}
+
+.example-radio-button {
+  margin: 5px;
+}
