error send qrcode

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,16 @@
-<app-tickets-all></app-tickets-all>
+
+        <div class="list-city">
+            <mat-card 
+                class="city" 
+                *ngFor="let item of city"
+                (click) = "navigateCity(item)">
+              <a>{{item}}</a>
+            </mat-card>
+        </div>
+
+
+
+
+
+
+<!-- <app-tickets-all></app-tickets-all> -->
