--- a/src/app/tickets/tickets-all/tickets-all.component.css
+++ b/src/app/tickets/tickets-all/tickets-all.component.css
@@ -3,16 +3,43 @@
   flex-wrap: wrap;
 }
 .item-ticket > .item {
-  width: 300px;
+  width: 270px;
   margin: 1rem;
   cursor: pointer;
 }
 .item > img {
   background-size: cover;
-  width: 300px;
   height: 170px;
 }
 .mat-card-content {
-  width: 300px;
+  width: 270px;
+  overflow: hidden;
+}
+.content {
+  overflow: hidden;
   word-wrap: break-word;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2; /* number of lines to show */
+  -webkit-box-orient: vertical;
+}
+
+.content::after {
+  content: "...";
+  float: inherit;
+
+}
+
+.category_filter {
+  display: flex;
+}
+
+.category {
+  flex: 25%;
+  margin: 1rem;
+}
+
+.list_ticket {
+  margin: 1rem;
+  flex: 70%;
 }
