--- a/src/styles.css
+++ b/src/styles.css
@@ -4,5 +4,13 @@ body { margin: 0; }
 .material-icons.orange600 { color: #FB8C00; }
 
 * {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Raleway', Tahoma, Geneva, Verdana, sans-serif;
+    
+}
+p {
+    line-height: 1.5rem;
+}
+
+li {
+    list-style-type: none;
 }
