--- a/src/app/menu/header/header.component.html
+++ b/src/app/menu/header/header.component.html
@@ -14,7 +14,8 @@
       <span>{{username}}</span>
       </button>
       <mat-menu #menu = "matMenu">
-        <button mat-menu-item (click) = "showChild('setting')" > Hồ sơ shop </button>
+        <button mat-menu-item (click) = "showChild('setting')" > Đơn hàng </button>
+        <button mat-menu-item (click) = "showChild('setting')" > Thông tin chi tiết </button>
         <button mat-menu-item routerLinkActive="mat-accent" (click) = 'onLogout()'>Đăng xuất</button>
       </mat-menu>
 	  </li>
